# usa_nlp

./: Makefile  README.md  flake.nix  main.org  pyproject.toml
src/: 10_word_classification.ipynb  11_word_clas_applications.ipynb  12_clustering.ipynb  13_text_clustering.ipynb  14_topic_modeling.ipynb  1_intro.ipynb  2_data_acquisition.ipynb  3_preprocessing.ipynb  4_regex.ipynb  5_bow.ipynb  6_bow_applications.ipynb  7_embeddings.ipynb  8_embeddings_applications.ipynb  9_text_classification.ipynb  taller1.ipynb
